--- a/lark-sandbox/requirements.txt
+++ b/lark-sandbox/requirements.txt
@@ -24,8 +24,12 @@ pathspec==0.8.1
     # via black
 pycodestyle==2.7.0
     # via flake8
+pydot==1.4.2
+    # via -r requirements.in
 pyflakes==2.3.1
     # via flake8
+pyparsing==2.4.7
+    # via pydot
 regex==2021.4.4
     # via black
 toml==0.10.2
