--- a/lark-sandbox/requirements.txt
+++ b/lark-sandbox/requirements.txt
@@ -6,12 +6,16 @@
 #
 appdirs==1.4.4
     # via black
+attrs==20.3.0
+    # via pytest
 black==20.8b1
     # via -r requirements.in
 click==7.1.2
     # via black
 flake8==3.9.1
     # via -r requirements.in
+iniconfig==1.1.1
+    # via pytest
 isort==5.8.0
     # via -r requirements.in
 lark==0.11.1
@@ -20,8 +24,14 @@ mccabe==0.6.1
     # via flake8
 mypy-extensions==0.4.3
     # via black
+packaging==20.9
+    # via pytest
 pathspec==0.8.1
     # via black
+pluggy==0.13.1
+    # via pytest
+py==1.10.0
+    # via pytest
 pycodestyle==2.7.0
     # via flake8
 pydot==1.4.2
@@ -29,11 +39,17 @@ pydot==1.4.2
 pyflakes==2.3.1
     # via flake8
 pyparsing==2.4.7
-    # via pydot
+    # via
+    #   packaging
+    #   pydot
+pytest==6.2.3
+    # via -r requirements.in
 regex==2021.4.4
     # via black
 toml==0.10.2
-    # via black
+    # via
+    #   black
+    #   pytest
 typed-ast==1.4.3
     # via black
 typing-extensions==3.7.4.3
