--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,7 +3,20 @@ name: CI
 on: [push]
 
 jobs:
-  test:
+  test-lark-sandbox:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - run: make install
+      - run: make lint
+      - run: make test
+
+  test-lucky-script:
     runs-on: ubuntu-latest
 
     steps:
