--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,23 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  test-lark-sandbox:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./lark-sandbox
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-
-      - run: make install
-      - run: make lint
-      - run: make test
-
-  test-lucky-script:
+  test:
     runs-on: ubuntu-latest
 
     steps:
