--- a/lark-sandbox/requirements.txt
+++ b/lark-sandbox/requirements.txt
@@ -12,6 +12,12 @@ black==20.8b1
     # via -r requirements.in
 click==7.1.2
     # via black
+colorama==0.4.4
+    # via pytest-watch
+coverage==5.5
+    # via pytest-cov
+docopt==0.6.2
+    # via pytest-watch
 flake8==3.9.1
     # via -r requirements.in
 iniconfig==1.1.1
@@ -42,8 +48,15 @@ pyparsing==2.4.7
     # via
     #   packaging
     #   pydot
-pytest==6.2.3
+pytest-cov==2.11.1
     # via -r requirements.in
+pytest-watch==4.2.0
+    # via -r requirements.in
+pytest==6.2.3
+    # via
+    #   -r requirements.in
+    #   pytest-cov
+    #   pytest-watch
 regex==2021.4.4
     # via black
 toml==0.10.2
@@ -54,3 +67,5 @@ typed-ast==1.4.3
     # via black
 typing-extensions==3.7.4.3
     # via black
+watchdog==2.0.3
+    # via pytest-watch
